templates/workload.template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >-
  FortiGate Auto Scaling Quick Start (existing VPC). This template deploys a Fortinet FortiGate
  cluster into an existing VPC with a Multi-AZ Auto Scaling group with AWS Lambda and LifecycleHook.
  See the Quick Start deployment guide for details. **WARNING** You will be billed for any
  FortiGate on-demand instances and related AWS resources if you create a stack from this
  template. (qs-1p3pr46rg)
Metadata:
  QuickStartDocumentation:
    EntrypointName: "Parameters for deploying into an existing VPC"
    OptionalParameters:
      - InternalLoadBalancerDnsName
  AWSAMIRegionMap:
    Filters:
      FGTVM64PAYG603:
        product-code: 2wqkpek696qhdeo7lbbjncqli
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Network configuration
        Parameters:
          - VpcId
          - VPCCIDR
          - PublicSubnet1
          - PublicSubnet2
          - PrivateSubnet1
          - PrivateSubnet2
          - PrivateSubnet1RouteTable
          - PrivateSubnet2RouteTable
      - Label:
          default: FortiGate configuration
        Parameters:
          - CustomIdentifier
          - FortiGateInstanceType
          - FortiGatePskSecret
          - FortiGateAdminPort
          - FortiGateAdminCidr
          - KeyPairName
      - Label:
          default: FortiGate Auto Scaling group configuration
        Parameters:
          - ExpireLifecycleEntry
          - FortiGateAsgDesiredCapacity
          - FortiGateAsgMinSize
          - FortiGateAsgMaxSize
          - FortiGateAsgHealthCheckGracePeriod
          - FortiGateAsgCooldown
          - FortiGateAsgScaleOutThreshold
          - FortiGateAsgScaleInThreshold
          - FortiGateElbTgHealthyThreshold
      - Label:
          default: Load-balancing configuration
        Parameters:
          - InternalLoadBalancingOptions
          - InternalLoadBalancerDnsName
          - BalanceWebTrafficOverPort
      - Label:
          default: AWS Quick Start configuration
        Parameters:
          - QSS3BucketName
          - QSS3KeyPrefix
          - QSS3BucketRegion
    ParameterLabels:
      CustomIdentifier:
        default: Resource name prefix
      VpcId:
        default: VPC ID
      PublicSubnet1:
        default: FortiGate subnet 1
      PublicSubnet2:
        default: FortiGate subnet 2
      PrivateSubnet1:
        default: Protected subnet 1
      PrivateSubnet2:
        default: Protected subnet 2
      PrivateSubnet1RouteTable:
        default: Route table 1 ID
      PrivateSubnet2RouteTable:
        default: Route table 2 ID
      FortiGateInstanceType:
        default: Instance type
      QSS3BucketName:
        default: Quick Start S3 bucket name
      QSS3KeyPrefix:
        default: Quick Start S3 key prefix
      QSS3BucketRegion:
        default: Quick Start S3 bucket Region
      ExpireLifecycleEntry:
        default: Instance lifecycle expiry
      FortiGateAsgCooldown:
        default: Scaling cooldown period
      FortiGateAsgDesiredCapacity:
        default: Desired capacity
      FortiGateAsgMinSize:
        default: Minimum group size
      FortiGateAsgMaxSize:
        default: Maximum group size
      FortiGateAsgHealthCheckGracePeriod:
        default: Health-check grace period
      FortiGateAsgScaleInThreshold:
        default: Scale-in threshold
      FortiGateAsgScaleOutThreshold:
        default: Scale-out threshold
      FortiGateElbTgHealthyThreshold:
        default: Healthy threshold
      BalanceWebTrafficOverPort:
        default: Web-service traffic port
      InternalLoadBalancingOptions:
        default: Internal ELB options
      InternalLoadBalancerDnsName:
        default: Internal ELB DNS name
      FortiGateAdminPort:
        default: Admin port
      FortiGateAdminCidr:
        default: Admin CIDR block
      KeyPairName:
        default: Key-pair name
      VPCCIDR:
        default: VPC CIDR
      FortiGatePskSecret:
        default: FortiGate PSK secret
Parameters:
  QSS3BucketName:
    Type: String
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Description: S3 bucket that you created for your copy of Quick Start assets. Use this if you decide to customize the Quick Start. This bucket name can include numbers, lowercase letters, uppercase letters, and hyphens, but do not start or end with a hyphen (-).
  QSS3KeyPrefix:
    Type: String
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: quickstart-fortinet-fortigate/
    Description: S3 key prefix that is used to simulate a directory for your copy of Quick Start assets. Use this if you decide to customize the Quick Start. This prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slashes (/). See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html.
  QSS3BucketRegion:
    Default: 'us-east-1'
    Description: "AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value."
    Type: String
  CustomIdentifier:
    Type: String
    Default: fgtASG
    MaxLength: '10'
    AllowedPattern: '[A-Za-z0-9]+'
    ConstraintDescription: Must contain only uppercase and lowercase letters and numbers
    Description: Custom identifier as resource name prefix. Must be at most 10 characters
      long and contain only uppercase, lowercase letters, and numbers. Maximum length
      is 10.
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Existing VPC IDs where you deploy the Auto Scaling group and
      related resources. The VPC must have the option "DNS hostnames" enabled.
  VPCCIDR:
    Type: String
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
    ConstraintDescription: Must be a valid CIDR block format.
    Description: CIDR block for the selected VPC.
  PublicSubnet1:
    Type: AWS::EC2::Subnet::Id
    Description: Public (DMZ) subnet 1, which is located in Availability Zone 1.
  PublicSubnet2:
    Type: AWS::EC2::Subnet::Id
    Description: Public (DMZ) subnet 2, which is located in Availability Zone 2.
  PrivateSubnet1:
    Type: AWS::EC2::Subnet::Id
    Description: Private subnet, which is located in Availability Zone 1.
  PrivateSubnet2:
    Type: AWS::EC2::Subnet::Id
    Description: Private subnet, which is located in Availability Zone 2.
  PrivateSubnet1RouteTable:
    Type: String
    Description: Route table ID associated with the private subnet 1.
  PrivateSubnet2RouteTable:
    Type: String
    Description: Route table ID associated with the private subnet 2.
  FortiGateInstanceType:
    Type: String
    Default: c5.large
    AllowedValues:
      - t2.small
      - c5.large
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5.9xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Description: >-
      Instance type to launch as FortiGate On-Demand instances. There are t2.small
      and compute-optimized instances such as c4 and c5 available with different vCPU
      sizes and bandwidths. For more information about instance types, see https://aws.amazon.com/ec2/instance-types/
  ExpireLifecycleEntry:
    Type: Number
    Default: 300
    MinValue: 60
    MaxValue: 3600
    ConstraintDescription: Must be a valid number between 60 and 3600.
    Description: FortiGate instance lifecycle expiry entry (in seconds). Minimum is
      60. Maximum is 3600.
  FortiGateAsgCooldown:
    Type: Number
    Default: 300
    MinValue: 60
    MaxValue: 3600
    ConstraintDescription: Must be a valid number between 60 and 3600.
    Description: Auto Scaling group waits for the cooldown period (in seconds) to
      complete before resuming scaling activities. Minimum is 60. Maximum is 3600.
  FortiGateAsgDesiredCapacity:
    Type: Number
    Default: 2
    MinValue: 2
    ConstraintDescription: Must be a valid number not less than 1.
    Description: Number of FortiGate instances the group should have at any time,
      also called desired capacity. Must keep at least 2 FortiGates in the group for
      high availability. Minimum is 2.
  FortiGateAsgMinSize:
    Type: Number
    Default: 2
    MinValue: 2
    ConstraintDescription: Must be a valid number not less than 1.
    Description: Minimum number of FortiGate instances in the Auto Scaling Group.
      Minimum is 2.
  FortiGateAsgMaxSize:
    Type: Number
    Default: 4
    MinValue: 2
    ConstraintDescription: Must be a valid number not less than 1.
    Description: Maximum number of FortiGate instances in the Auto Scaling Group.
      Minimum is 2.
  FortiGateAsgHealthCheckGracePeriod:
    Type: Number
    Default: 300
    MinValue: 60
    ConstraintDescription: Must be a valid number not less than 60.
    Description: Length of time (in seconds) that Auto Scaling waits before checking
      an instance's health status. Minimum is 60.
  FortiGateAsgScaleInThreshold:
    Type: Number
    Default: 25
    MinValue: 1
    MaxValue: 100
    ConstraintDescription: Must be a valid number between 1 and 100.
    Description: Threshold (in percentage) for the FortiGate Auto Scaling group
      to scale-in (remove) 1 instance. Minimum is 1. Maximum is 100.
  FortiGateAsgScaleOutThreshold:
    Type: Number
    Default: 80
    MinValue: 1
    MaxValue: 100
    ConstraintDescription: Must be a valid number between 1 and 100.
    Description: Threshold (in percentage) for the FortiGate Auto Scaling group
      to scale-out (add) 1 instance. Minimum is 1. Maximum is 100.
  FortiGateElbTgHealthyThreshold:
    Type: Number
    Default: 3
    MinValue: 3
    ConstraintDescription: Must be a valid number not less than 3.
    Description: Number of consecutive health-check failures required before considering
      a FortiGate instance unhealthy. Minimum is 3.
  BalanceWebTrafficOverPort:
    Type: Number
    Default: 443
    MinValue: 1
    MaxValue: 65535
    ConstraintDescription: Must be a valid port number between 1 and 65535.
    Description: Balance web-service traffic over this port if the internal web-service
      load balancer is enabled. Minimum is 1. Maximum is 65535.
  InternalLoadBalancingOptions:
    Type: String
    Default: Add a new internal load balancer
    AllowedValues:
      - Add a new internal load balancer
      - Use a load balancer specified below
      - Do not need one
    ConstraintDescription: Must choose from the provided options.
    Description: (Optional) Predefined load balancer that router traffic to web
      service in the private subnets. You may use your own one or choose that you don't need one.
  InternalLoadBalancerDnsName:
    Type: String
    Description: (Optional) Domain Name System (DNS) name of the Network Load Balancer that's used in the private subnets. Specify only if you added an internal load balancer under `InternalLoadBalancingOptions`.
  FortiGatePskSecret:
    Type: String
    NoEcho: true
    Description: Secret key for the FortiGate instances to securely communicate
      with each other. It can be of your choice of numbers or letters
      or a combination. Maximum length is 128.
  FortiGateAdminPort:
    Type: Number
    Default: 8443
    MinValue: 1
    MaxValue: 65535
    ConstraintDescription: Must be a valid port number between 1 and 65535.
    Description: 'Port number for FortiGate administration. Minimum is 1. Maximum
      is 65535. Do not use: 443, 541, 514, 703 because these are FortiGate-reserved
      ports.'
  FortiGateAdminCidr:
    Type: String
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
    ConstraintDescription: Must be a valid CIDR block format, and 0.0.0.0/0 is not
      recommended.
    Description: >-
      CIDR block for external administrator management access. **WARNING!** 0.0.0.0/0 accepts
      connections from any IP address. We recommend that you use a constrained CIDR
      range to reduce the potential of inbound attacks from unknown IP addresses.
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Amazon EC2 key pair for administrator access.
Conditions:
  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
  IfAddNewInternalLoadBalancer: !Equals
    - !Ref 'InternalLoadBalancingOptions'
    - add a new internal load balancer
  IfUseExistingInternalLoadBalancer: !Equals
    - !Ref 'InternalLoadBalancingOptions'
    - use a load balancer specified below
  IfNeedInternalLoadBalancing: !Not
    - !Equals
      - !Ref 'InternalLoadBalancingOptions'
      - do not need one
  IfCustomBalanceWebTrafficOverPort: !Not
    - !Equals
      - !Ref 'BalanceWebTrafficOverPort'
      - '0'
Mappings:
  FortiGateAutoScaleNameMap:
    FortiGateVersion:
      LATEST: FGTVM64PAYG603
      '603': FGTVM64PAYG603
  AWSAMIRegionMap:
    AMI:
      FGTVM64PAYG603: FortiGate-VM64-AWSONDEMAND build0268 (6.0.5) GA-3124a694-441c-4ff1-8bf7-4d153be424a6-ami-0072f781cee3b2a26.4
    ap-northeast-1:
      FGTVM64PAYG603: ami-0a22995f7caee5334
    ap-northeast-2:
      FGTVM64PAYG603: ami-035be57bc51756b25
    ap-southeast-1:
      FGTVM64PAYG603: ami-0bf83888fb5d993bb
    ap-southeast-2:
      FGTVM64PAYG603: ami-091de784c26944cb1
    ap-south-1:
      FGTVM64PAYG603: ami-0ffb0d6e20fee4b99
    sa-east-1:
      FGTVM64PAYG603: ami-06ee5a5f1d6c76d94
    eu-west-1:
      FGTVM64PAYG603: ami-06b7a8249560562b8
    eu-west-2:
      FGTVM64PAYG603: ami-0f3a89b9b30652fcb
    eu-west-3:
      FGTVM64PAYG603: ami-04ce590dbf2d54f31
    eu-central-1:
      FGTVM64PAYG603: ami-0b67a4aaa7832805a
    ca-central-1:
      FGTVM64PAYG603: ami-0cf150ce56dbb3868
    us-east-1:
      FGTVM64PAYG603: ami-0ca8b3e14d2bb45c6
    us-east-2:
      FGTVM64PAYG603: ami-0d5da5f2ef4130386
    us-west-1:
      FGTVM64PAYG603: ami-00b5736be5f8e72c0
    us-west-2:
      FGTVM64PAYG603: ami-073c48055f708e0dc
    us-gov-west-1:
      FGTVM64PAYG603: ami-c4d9efa5
  ProtocolPortMap:
    HTTP:
      defaultport: '80'
    HTTPS:
      defaultport: '443'
    TCP:
      defaultport: '443'
Resources:
  StackCreateDynamoDBTable:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        CustomIdentifier: !Ref 'CustomIdentifier'
        UniqueId: !Select
          - 0
          - !Split
            - '-'
            - !Select
              - 2
              - !Split
                - /
                - !Ref 'AWS::StackId'
      TemplateURL:
        !Sub
          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-db-table.template.yaml'
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      TimeoutInMinutes: 10
  StackCopyLambda:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        QSS3BucketName: !Ref 'QSS3BucketName'
        QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
        QSS3BucketRegion: !Ref 'QSS3BucketRegion'
      TemplateURL:
        !Sub
          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/copy-lambda.template.yaml'
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      TimeoutInMinutes: 10
  StackCreateAPIGateway:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        CustomIdentifier: !Ref 'CustomIdentifier'
        APIGatewayName: !Join
          - '-'
          - - !Ref 'CustomIdentifier'
            - FortiGate-AutoScale-APIGateway
            - !Select
              - 0
              - !Split
                - '-'
                - !Select
                  - 2
                  - !Split
                    - /
                    - !Ref 'AWS::StackId'
        VpcEndpointId: !Ref 'VpcEndpointApiGw'
        LambdaFunctionArn: !GetAtt 'LambdaFunctionFgtAsg.Arn'
      TemplateURL:
        !Sub
          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-api-gateway.template.yaml'
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      TimeoutInMinutes: 10
  FgtAsgSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FortiGate security group
      VpcId: !Ref 'VpcId'
  FgtAsgSecurityGroupIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: '-1'
      CidrIp: !Ref 'VPCCIDR'
  FgtAsgSecurityGroupIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: !Ref 'FortiGateAdminCidr'
  FgtAsgSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: tcp
      FromPort: 541
      ToPort: 541
      CidrIp: !Ref 'FortiGateAdminCidr'
  FgtAsgSecurityGroupIngressAdminAccess:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: tcp
      FromPort: !Ref 'FortiGateAdminPort'
      ToPort: !Ref 'FortiGateAdminPort'
      CidrIp: !Ref 'FortiGateAdminCidr'
  FgtAsgSecurityGroupEgressInternal:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: '-1'
      CidrIp: '0.0.0.0/0'
  VpcEndpointApiGw:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      VpcId: !Ref 'VpcId'
      PrivateDnsEnabled: true
      ServiceName: !Sub
        - com.amazonaws.${region}.execute-api
        - region: !Ref 'AWS::Region'
      SecurityGroupIds:
        - !Ref 'FgtAsgSecurityGroup'
      SubnetIds:
        - !Ref 'PublicSubnet1'
  StackCreateFortiGateNatGateway:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        QSS3BucketName: !Ref 'QSS3BucketName'
        QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
        QSS3BucketRegion: !Ref 'QSS3BucketRegion'
        CustomIdentifier: !Ref 'CustomIdentifier'
        VpcId: !Ref 'VpcId'
        SubnetId1: !Ref 'PublicSubnet1'
        SubnetId2: !Ref 'PrivateSubnet1'
        SubnetId3: !Ref 'PublicSubnet2'
        SubnetId4: !Ref 'PrivateSubnet2'
        FortiGateImageId: !FindInMap
          - AWSAMIRegionMap
          - !Ref 'AWS::Region'
          - !FindInMap
            - FortiGateAutoScaleNameMap
            - FortiGateVersion
            - LATEST
        FortiGateInstanceType: !Ref 'FortiGateInstanceType'
        FortiGateAdminCidr: !Ref 'FortiGateAdminCidr'
        KeyPairName: !Ref 'KeyPairName'
        FortiGateAdminPort: !Ref 'FortiGateAdminPort'
      TemplateURL:
        !Sub
          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-nat-fgt-master.template.yaml'
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      TimeoutInMinutes: 10
  NatGateway1RouteAttachmentNew:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref 'PrivateSubnet1RouteTable'
      NetworkInterfaceId: !GetAtt 'StackCreateFortiGateNatGateway.Outputs.InstanceId1Nic1Id'
  NatGateway2RouteAttachmentNew:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref 'PrivateSubnet2RouteTable'
      NetworkInterfaceId: !GetAtt 'StackCreateFortiGateNatGateway.Outputs.InstanceId2Nic1Id'
  FgtSecurityGroupIngressAllowedTraffic1:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: IfCustomBalanceWebTrafficOverPort
    Properties:
      GroupId: !Ref 'FgtAsgSecurityGroup'
      IpProtocol: tcp
      FromPort: !Ref 'BalanceWebTrafficOverPort'
      ToPort: !Ref 'BalanceWebTrafficOverPort'
      CidrIp: '0.0.0.0/0'
  LaunchTemplateFgtAutoscale:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        UserData: !Base64
          Fn::Sub:
            - '{"config-url": "${configUrl}","productcode":"${productCode}"}'
            - configUrl: !Sub
                - https://${api}.execute-api.${region}.amazonaws.com/${stage}/get-config
                - region: !Ref 'AWS::Region'
                  api: !GetAtt 'StackCreateAPIGateway.Outputs.APIGatewayId'
                  stage: prod
                  resource: complete
              productCode: ''
        InstanceInitiatedShutdownBehavior: terminate
        ImageId: !FindInMap
          - AWSAMIRegionMap
          - !Ref 'AWS::Region'
          - !FindInMap
            - FortiGateAutoScaleNameMap
            - FortiGateVersion
            - LATEST
        BlockDeviceMappings: []
        IamInstanceProfile:
          Arn: !GetAtt 'IamInstanceProfileFgt.Arn'
        InstanceType: !Ref 'FortiGateInstanceType'
        NetworkInterfaces:
          - DeviceIndex: 0
            Groups:
              - !Ref 'FgtAsgSecurityGroup'
            AssociatePublicIpAddress: true
        KeyName: !Ref 'KeyPairName'
    DependsOn:
      - IamInstanceProfileFgt
  FortiGateScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - FortiGateAutoScalingGroup
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
      LaunchTemplate:
        LaunchTemplateId: !Ref 'LaunchTemplateFgtAutoscale'
        Version: '1'
      Cooldown: !Ref 'FortiGateAsgCooldown'
      DesiredCapacity: !Ref 'FortiGateAsgDesiredCapacity'
      HealthCheckGracePeriod: !Ref 'FortiGateAsgHealthCheckGracePeriod'
      HealthCheckType: EC2
      MaxSize: !Ref 'FortiGateAsgMaxSize'
      MinSize: !Ref 'FortiGateAsgMinSize'
      VPCZoneIdentifier:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
      TerminationPolicies:
        - Default
      TargetGroupARNs:
        - !Ref 'ElbV2TargetGroupFgtAsg'
    DependsOn:
      - LaunchTemplateFgtAutoscale
      - ElbV2TargetGroupFgtAsg
      - LambdaFunctionFgtAsg
  AsgScaleInPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref 'FortiGateScalingGroup'
      ScalingAdjustment: -1
    DependsOn:
      - FortiGateScalingGroup
  ScaleOutPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref 'FortiGateScalingGroup'
      ScalingAdjustment: 1
    DependsOn:
      - FortiGateScalingGroup
  AlarmCpuUtilHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 1
      Statistic: Average
      Threshold: !Ref 'FortiGateAsgScaleOutThreshold'
      AlarmDescription: Alarm if CPU too high or metric disappears indicating instance
        is down.
      Period: !Ref 'FortiGateAsgCooldown'
      AlarmActions:
        - !Ref 'ScaleOutPolicy'
      Namespace: AWS/EC2
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref 'FortiGateScalingGroup'
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization
  AlarmCpuUtilLow:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 1
      Statistic: Average
      Threshold: !Ref 'FortiGateAsgScaleInThreshold'
      AlarmDescription: Alarm if CPU too low or metric disappears indicating instance
        is down.
      Period: !Ref 'FortiGateAsgCooldown'
      AlarmActions:
        - !Ref 'AsgScaleInPolicy'
      Namespace: AWS/EC2
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref 'FortiGateScalingGroup'
      ComparisonOperator: LessThanThreshold
      MetricName: CPUUtilization
  LambdaFunctionFgtAsg:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - lfFgt
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
      Runtime: nodejs12.x
      Role: !GetAtt 'IamRoleLfFgtAsg.Arn'
      Handler: index.AutoscaleHandler
      Timeout: 300
      Code:
        S3Bucket: !GetAtt 'StackCopyLambda.Outputs.LambdaZipsBucket'
        S3Key: !Sub
          - ${QSS3KeyPrefix}functions/packages/lambda.zip
          - QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
      Environment:
        Variables:
          EXPIRE_LIFECYCLE_ENTRY: !Ref 'ExpireLifecycleEntry'
          API_GATEWAY_NAME: !Join
            - '-'
            - - !Ref 'CustomIdentifier'
              - FortiGate-AutoScale-APIGateway
              - !Select
                - 0
                - !Split
                  - '-'
                  - !Select
                    - 2
                    - !Split
                      - /
                      - !Ref 'AWS::StackId'
          API_GATEWAY_STAGE_NAME: prod
          API_GATEWAY_RESOURCE_NAME: complete
          UNIQUE_ID: !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
          CUSTOM_ID: !Ref 'CustomIdentifier'
          AUTO_SCALING_GROUP_NAME: !Join
            - '-'
            - - !Ref 'CustomIdentifier'
              - FortiGateAutoScalingGroup
              - !Select
                - 0
                - !Split
                  - '-'
                  - !Select
                    - 2
                    - !Split
                      - /
                      - !Ref 'AWS::StackId'
          VPC_ID: !Ref 'VpcId'
          STACK_ASSETS_S3_BUCKET_NAME: !Ref 'QSS3BucketName'
          STACK_ASSETS_S3_KEY_PREFIX: !Sub
            - ${QSS3KeyPrefix}assets
            - QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
          REQUIRED_CONFIG_SET: !Join
            - ','
            - - !Join
                - '-'
                - - httpsroutingpolicy
                  - !If
                    - IfNeedInternalLoadBalancing
                    - 'yes'
                    - 'no'
          FORTIGATE_INTERNAL_ELB_DNS: !If
            - IfAddNewInternalLoadBalancer
            - !GetAtt 'ElbV2LoadBalancerInternal.DNSName'
            - !If
              - IfUseExistingInternalLoadBalancer
              - !Ref 'InternalLoadBalancerDnsName'
              - ''
          FORTIGATE_PSKSECRET: !Ref 'FortiGatePskSecret'
          FORTIGATE_ADMIN_PORT: !Ref 'FortiGateAdminPort'
          FORTIGATE_TRAFFIC_PORT: !Ref 'BalanceWebTrafficOverPort'
    DependsOn:
      - StackCopyLambda
      - StackCreateDynamoDBTable
  IamInstanceProfileFgt:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref 'IamRoleFgtInstance'
  IamRoleFgtInstance:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AWSLambdaExecute
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      Policies:
        - PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action:
                  - s3:GetObject
                Resource: !Sub
                  - arn:${AWS::Partition}:s3:::${S3Bucket}/${QSS3KeyPrefix}*
                  - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
                Effect: Allow
          PolicyName: aws-quick-start-s3-policy
  IamRoleLfFgtAsg:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AWSLambdaExecute
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: autoscale-handler-inline-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:CreateTable
                  - dynamodb:DescribeTable
                  - dynamodb:Scan
                  - dynamodb:Query
                  - dynamodb:DeleteItem
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                Resource: !Split
                  - ','
                  - !GetAtt 'StackCreateDynamoDBTable.Outputs.DdbTableArnList'
              - Effect: Allow
                Action:
                  - autoscaling:CompleteLifecycleAction
                  - autoscaling:SetDesiredCapacity
                  - autoscaling:SetInstanceProtection
                Resource: !Sub
                  - arn:aws:autoscaling:${AWS_REGION}:${AWS_ACCOUNT_ID}:autoScalingGroup:*:autoScalingGroupName/${ASG_NAME}
                  - AWS_REGION: !Ref 'AWS::Region'
                    AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                    ASG_NAME: !Join
                      - '-'
                      - - !Ref 'CustomIdentifier'
                        - FortiGateAutoScalingGroup
                        - !Select
                          - 0
                          - !Split
                            - '-'
                            - !Select
                              - 2
                              - !Split
                                - /
                                - !Ref 'AWS::StackId'
              - Effect: Allow
                Action:
                  - autoscaling:DescribeAutoScalingInstances
                  - dynamodb:ListTables
                Resource: '*'
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeVpcs
                  - ec2:DescribeInstanceAttribute
                Resource: '*'
              - Effect: Allow
                Action:
                  - apigateway:GET
                Resource: !Sub
                  - arn:aws:apigateway:${AWS_REGION}::*
                  - AWS_REGION: !Ref 'AWS::Region'
              - Effect: Allow
                Action: s3:GetObject
                Resource: !Sub
                  - arn:aws:s3:::${bucketname}/${keyprefix}assets/configset/*
                  - bucketname: !Ref 'QSS3BucketName'
                    keyprefix: !Ref 'QSS3KeyPrefix'
  ErAsgLifecycleHookTrigger:
    Type: AWS::Events::Rule
    Properties:
      EventPattern: !Sub
        - >-
          {"source":["aws.autoscaling"],"detail-type":["EC2 Instance Launch Successful","EC2
          Instance Launch Unsuccessful","EC2 Instance-launch Lifecycle Action", "EC2
          Instance Terminate Successful","EC2 Instance Terminate unsuccessful","EC2
          Instance-terminate Lifecycle Action"], "detail": {"AutoScalingGroupName":
          ["${asg}"]}}
        - asg: !Join
            - '-'
            - - !Ref 'CustomIdentifier'
              - FortiGateAutoScalingGroup
              - !Select
                - 0
                - !Split
                  - '-'
                  - !Select
                    - 2
                    - !Split
                      - /
                      - !Ref 'AWS::StackId'
      State: ENABLED
      Description: Invoke when FortiGate Auto Scaling group is launching or terminating
        instances or taking lifecycle actions.
      Targets:
        - Id: erFortiGateAutoScalingTriggerToLambda
          Arn: !GetAtt 'LambdaFunctionFgtAsg.Arn'
  LpAsgLifecyclePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !Ref 'LambdaFunctionFgtAsg'
      Action: lambda:InvokeFunction
      Principal: events.amazonaws.com
      SourceArn: !GetAtt 'ErAsgLifecycleHookTrigger.Arn'
  LpAsgComplete:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt 'LambdaFunctionFgtAsg.Arn'
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      SourceArn: !Sub
        - arn:aws:execute-api:${region}:${account}:${api}/*
        - region: !Ref 'AWS::Region'
          account: !Ref 'AWS::AccountId'
          api: !GetAtt 'StackCreateAPIGateway.Outputs.APIGatewayId'
    DependsOn:
      - LambdaFunctionFgtAsg
  AsgLifeCycleHookLaunching:
    DependsOn: LambdaFunctionFgtAsg
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      AutoScalingGroupName: !Ref 'FortiGateScalingGroup'
      LifecycleHookName: asgFgtAutoscaleLifecycleLaunching
      LifecycleTransition: autoscaling:EC2_INSTANCE_LAUNCHING
      HeartbeatTimeout: !Ref 'ExpireLifecycleEntry'
      DefaultResult: ABANDON
  AsgLifeCycleHookTerminating:
    DependsOn: LambdaFunctionFgtAsg
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      AutoScalingGroupName: !Ref 'FortiGateScalingGroup'
      LifecycleHookName: asgFgtAutoscaleLifecycleHookTerminating
      LifecycleTransition: autoscaling:EC2_INSTANCE_TERMINATING
      HeartbeatTimeout: !Ref 'ExpireLifecycleEntry'
      DefaultResult: CONTINUE
  ElbV2TargetGroupFgtAsg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - tgFgt
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
      Protocol: TCP
      Port: !If
        - IfCustomBalanceWebTrafficOverPort
        - !Ref 'BalanceWebTrafficOverPort'
        - !FindInMap
          - ProtocolPortMap
          - TCP
          - defaultport
      HealthCheckProtocol: TCP
      HealthCheckPort: !Ref 'FortiGateAdminPort'
      HealthyThresholdCount: !Ref 'FortiGateElbTgHealthyThreshold'
      UnhealthyThresholdCount: !Ref 'FortiGateElbTgHealthyThreshold'
      VpcId: !Ref 'VpcId'
  ElbV2LoadBalancerFgtAsg:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: network
      Subnets:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
      Name: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - nlbFgt
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
    DependsOn:
      - ElbV2TargetGroupFgtAsg
  ElbV2ListenerFgtAsg:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref 'ElbV2LoadBalancerFgtAsg'
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref 'ElbV2TargetGroupFgtAsg'
      Protocol: TCP
      Port: !If
        - IfCustomBalanceWebTrafficOverPort
        - !Ref 'BalanceWebTrafficOverPort'
        - !FindInMap
          - ProtocolPortMap
          - TCP
          - defaultport
    DependsOn:
      - ElbV2LoadBalancerFgtAsg
      - ElbV2TargetGroupFgtAsg
  ElbV2TargetGroupInternal:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: IfAddNewInternalLoadBalancer
    Properties:
      Name: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - tgPrSn
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
      Protocol: TCP
      Port: !If
        - IfCustomBalanceWebTrafficOverPort
        - !Ref 'BalanceWebTrafficOverPort'
        - !FindInMap
          - ProtocolPortMap
          - TCP
          - defaultport
      HealthCheckProtocol: TCP
      HealthCheckPort: !If
        - IfCustomBalanceWebTrafficOverPort
        - !Ref 'BalanceWebTrafficOverPort'
        - !FindInMap
          - ProtocolPortMap
          - TCP
          - defaultport
      VpcId: !Ref 'VpcId'
  ElbV2LoadBalancerInternal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Condition: IfAddNewInternalLoadBalancer
    Properties:
      Scheme: internal
      Type: network
      Subnets:
        - !Ref 'PrivateSubnet1'
        - !Ref 'PrivateSubnet2'
      Name: !Join
        - '-'
        - - !Ref 'CustomIdentifier'
          - nlbPrSn
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - /
                  - !Ref 'AWS::StackId'
    DependsOn:
      - ElbV2TargetGroupInternal
  ElbV2ListenerInternal:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: IfAddNewInternalLoadBalancer
    Properties:
      LoadBalancerArn: !Ref 'ElbV2LoadBalancerInternal'
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref 'ElbV2TargetGroupInternal'
      Protocol: TCP
      Port: !If
        - IfCustomBalanceWebTrafficOverPort
        - !Ref 'BalanceWebTrafficOverPort'
        - !FindInMap
          - ProtocolPortMap
          - TCP
          - defaultport
    DependsOn:
      - ElbV2LoadBalancerInternal
      - ElbV2TargetGroupInternal
